fix fonts and details contrast

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -106,14 +106,13 @@
         select,
         option,
         button {
-            color: black;
+            color: inherit;
         }
 
 
 
         .section {
             display: flex;
-
             padding: 20px;
             gap: 10px;
             flex-direction: column;
@@ -124,7 +123,7 @@
         .links {
             background-color: #fff;
             padding: 20px;
-            color: black;
+            color: inherit;
             display: flex;
             flex-direction: column;
             border-top: 1px solid black;
