--- a/src/components/SwitchLanguage/SwitchLanguage.module.scss
+++ b/src/components/SwitchLanguage/SwitchLanguage.module.scss
@@ -4,8 +4,9 @@
     padding: 8px;
     font-size: 16px;
     cursor: pointer;
-    background-color: transparent;
     border: none;
+    background-color: inherit;
+    color: inherit;
 
     @media screen and (max-width: 768px) {
       padding: 0;
