--- a/src/styles/billetterie.module.scss
+++ b/src/styles/billetterie.module.scss
@@ -61,11 +61,15 @@
 
     select,
     input {
-      background: transparent;
+      background-color: rgba(0,0,0,0);
       border: 1px solid white;
-      color: white;
       padding: 0.5rem;
       font-size: 1rem;
+      color: white;
+    }
+
+    input[type="date"]::-webkit-calendar-picker-indicator {
+      filter: invert(1); 
     }
 
     button {
