--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,8 +1,10 @@
-// @import url('https://db.onlinewebfonts.com/c/543092172c7d9a62dc51fa0fc510b6cf?family=Everett+Regular');
-// @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap');
 
-// font face fonts/Aurora-gx4V6.woff
+@font-face {
+  font-family: 'TWKEverett';
+  src: url('../fonts/TWKEverett.ttf') format('ttf');
+  font-weight: normal;
+  font-style: normal;
+}
 
 @font-face {
   font-family: 'Aurora';
@@ -11,33 +13,15 @@
   font-style: normal;
 }
 
-// @font-face {
-//   font-family: "Everett Regular";
-//   src: url("https://db.onlinewebfonts.com/t/543092172c7d9a62dc51fa0fc510b6cf.eot");
-//   src: url("https://db.onlinewebfonts.com/t/543092172c7d9a62dc51fa0fc510b6cf.eot?#iefix")format("embedded-opentype"),
-//   url("https://db.onlinewebfonts.com/t/543092172c7d9a62dc51fa0fc510b6cf.woff2")format("woff2"),
-//   url("https://db.onlinewebfonts.com/t/543092172c7d9a62dc51fa0fc510b6cf.woff")format("woff"),
-//   url("https://db.onlinewebfonts.com/t/543092172c7d9a62dc51fa0fc510b6cf.ttf")format("truetype"),
-//   url("https://db.onlinewebfonts.com/t/543092172c7d9a62dc51fa0fc510b6cf.svg#Everett Regular")format("svg");
-// }
-
 :root {
-  --background: #ffffff;
-  --foreground: rgb(23, 23, 23);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --background: #000000;
+  --foreground: #ffffff;
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
-  // font-family: 'Everett Regular', sans-serif;
-  font-family: 'Geist', sans-serif;
+  font-family: 'TWKEverett', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -60,12 +44,6 @@ a {
 
 button, input, textarea, select, a, option, optgroup {
   font-family: inherit;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
 
 .button {
